Integrate Parser class for token parsing; streamline main method and enhance Node class with toString implementation, added initial AST string print without formatting